--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cinema Magic - Your Ultimate Movie Hub</title>
+    <title>Cinehub</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
 </head>
 <body>
     <div class="container-fluid py-4 text-center header-container">
-        <h1 class="display-4 fw-bold mb-4">Cinema Magic</h1>
+        <h1 class="display-4 fw-bold mb-4">Cinehub</h1>
         <p class="lead mb-4">Your Ultimate Destination for Global Cinema</p>
         
         <div class="search-container">
